--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@tanstack/react-query": "^5.87.4",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
