--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.87.4",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -25,7 +27,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
