--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.23.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
